# BPDProductList

./: .gitignore  README.md  netlify.toml
algolia/: index.js  package-lock.json  package.json
app/product-list/: .eslintcache  package.json
app/product-list/public/: index.html
app/product-list/src/: App.tsx  index.css  index.tsx  netlify.toml
app/product-list/src/app/: constants.ts  store.ts
app/product-list/src/features/company/: Company.tsx  (+2 more)
python/product-list/: pyproject.toml  setup.cfg
python/product-list/product_list/: .gitignore
python/product-list/product_list/core/: Playground.ipynb  app.py  config.py
python/product-list/product_list/core/assets/: bpdprielist.xlsx
python/product-list/product_list/data/: company_api.py  products_api.py
python/product-list/product_list/models/: company.py  product.py
python/product-list/tests/: test_product_list.py
python/product-list/tests/models/: test_product.py
react/redux-observable-ts-hooks-boilerplate/: package.json
react/redux-observable-ts-hooks-boilerplate/scripts/: start.js
react/redux-observable-ts-hooks-boilerplate/src/actions/: company.ts
react/redux-observable-ts-hooks-boilerplate/src/components/: CompanyList.tsx
react/redux-observable-ts-hooks-boilerplate/src/constants/: index.ts
react/redux-observable-ts-hooks-boilerplate/src/data/: company.ts
react/redux-observable-ts-hooks-boilerplate/src/epics/: company.ts  index.ts
react/redux-observable-ts-hooks-boilerplate/src/reducers/: company.ts  index.ts
react/redux-observable-ts-hooks-boilerplate/src/routes/: Login.tsx  Top.tsx
(+4 files in other folders)
