[tool.poetry]
name = "product-list"
version = "0.1.0"
description = ""
authors = ["Rohithgilla12 <gillarohith1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.5"
flake8 = "^3.8.4"
jsonpickle = "^1.4.2"
coverage = "^5.3"
pytest-cov = "^2.10.1"
firebase-admin = "^4.5.0"
xlrd = "1.2.0"
traitlets = "4.3.3"
google-cloud-firestore = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
